add dockerfile, docker-compose, jenkinsfile